@@ -1,0 +1,17 @@
+package org.mmisw.iserver.gwt.client.rpc;
+
+import java.io.Serializable;
+
+/**
+ * Info necessary for the creation of the contents (data) of an ontology.
+ * 
+ * @author Carlos Rueda
+ */
+public abstract class DataCreationInfo implements Serializable {
+	private static final long serialVersionUID = 1L;
+	
+	public DataCreationInfo() {
+		
+	}
+	
+}
